asymetrical input-output types part 1
