# rust/openapi/src/models/mod.rs
@@ -62,12 +62,16 @@ pub mod recipe_dependency;
 pub use self::recipe_dependency::RecipeDependency;
 pub mod recipe_detail;
 pub use self::recipe_detail::RecipeDetail;
+pub mod recipe_detail_input;
+pub use self::recipe_detail_input::RecipeDetailInput;
 pub mod recipe_section;
 pub use self::recipe_section::RecipeSection;
 pub mod recipe_source;
 pub use self::recipe_source::RecipeSource;
 pub mod recipe_wrapper;
 pub use self::recipe_wrapper::RecipeWrapper;
+pub mod recipe_wrapper_input;
+pub use self::recipe_wrapper_input::RecipeWrapperInput;
 pub mod search_result;
 pub use self::search_result::SearchResult;
 pub mod section_ingredient;
