# rust/openapi/src/models/recipe_detail_input.rs
@@ -1,0 +1,55 @@
+/*
+ * Gourd Recipe Database
+ *
+ * API for https://github.com/nickysemenza/gourd
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: n@nickysemenza.com
+ * Generated by: https://openapi-generator.tech
+ */
+
+/// RecipeDetailInput : A revision of a recipe
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct RecipeDetailInput {
+    /// id
+    #[serde(rename = "id")]
+    pub id: String,
+    /// sections of the recipe
+    #[serde(rename = "sections")]
+    pub sections: Vec<crate::models::RecipeSection>,
+    /// recipe name
+    #[serde(rename = "name")]
+    pub name: String,
+    /// book or websites
+    #[serde(rename = "sources", skip_serializing_if = "Option::is_none")]
+    pub sources: Option<Vec<crate::models::RecipeSource>>,
+    /// num servings
+    #[serde(rename = "servings", skip_serializing_if = "Option::is_none")]
+    pub servings: Option<i64>,
+    /// serving quantity
+    #[serde(rename = "quantity")]
+    pub quantity: i64,
+    /// serving unit
+    #[serde(rename = "unit")]
+    pub unit: String,
+}
+
+impl RecipeDetailInput {
+    /// A revision of a recipe
+    pub fn new(id: String, sections: Vec<crate::models::RecipeSection>, name: String, quantity: i64, unit: String) -> RecipeDetailInput {
+        RecipeDetailInput {
+            id,
+            sections,
+            name,
+            sources: None,
+            servings: None,
+            quantity,
+            unit,
+        }
+    }
+}
+
+
